# convex-obstacles-vcc

./: .gitignore  README.md  pyproject.toml
scripts/: example_2d.py
src/convexobstaclesvcc/: __init__.py  clique_cover.py  covcc.py  inflation.py  plotting.py  visibility_graph.py
